[project]
name = "contentforge"
version = "0.1.0"
description = "Cross-DCC SDK for professional pipeline development. Build production-ready plugins for Maya/Blender/Unreal/Unity and toolsets for Substance/Houdini with unified API abstraction, version tolerance mechanisms, and CI-ready automation workflows."
readme = "README.md"
requires-python = "~3.12"
license = { text = "MIT" }
keywords = ["dcc", "plugin-development", "content-tools"]
authors = [{ name = "Content Forge", email = "ContentForge.org@hotmail.com" }]
maintainers = [{ name = "Content Forge", email = "ContentForge.org@hotmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pre-commit (>=4.1.0,<5.0.0)",
]
[project.urls]
Homepage = "https://contentforge.org"
Documentation = "https://github.com/ContentForgeFramework/contentforge#readme"
Repository = "https://github.com/ContentForgeFramework/contentforge"
Issues = "https://github.com/ContentForgeFramework/contentforge/issues"

[tool.poetry]
include = [
    "LICENSE",
]
packages = [
    { include = "contentforge", from = "vendor" },
]
exclude = [
    "tests/**/*",
    "docs/build",
    "build/**/*",
    ".github/workflows/*"
]
[tool.poetry.group.dev.dependencies]
click = "^8.1.8"
black = "^25.1.0"
pyyaml = "^6.0.2"
tomli = "^2.2.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"

[tool.poetry.group.ui.dependencies]
pyside6 = "^6.8.2"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
mkdocstrings = { extras = ["python"], version = "^0.29.0" }
mkdocstrings-python = "^1.8.0"

mike = "^2.0.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-glightbox = "^0.3.7"

pymdown-extensions = "^10.7"
mkdocs-autorefs = "^1.4.1"
griffe = "^1.6.0"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = 4
lines_after_imports = 2
lines_between_types = 2
combine_as_imports = true
case_sensitive = true
skip = ["docs"]

[tool.mypy]
# ignore_missing_imports = true
"mkdocs_gen_files.*" = { ignore_missing_imports = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
    -v
    --cov-report=term-missing
    --cov-report=html:coverage_html
    --cov-fail-under=100
    --debug
    """

[tool.poetry.scripts]
artisan = "contentforge.cli:main"
art = "contentforge.cli:main"
art-init = "contentforge.cli:init"
art-make = "contentforge.cli:make"
art-test = "contentforge.cli:test"
art-docs = "contentforge.cli:docs"
art-pre = "contentforge.cli:pre"
art-build = "contentforge.cli:build"
art-dev = "contentforge.cli:dev"
art-run = "contentforge.cli:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
